Bugfix - IE11 - Misalignment on last row in Datagrid when column is frozen

--- a/src/alto-ui/Datagrid/Datagrid.scss
+++ b/src/alto-ui/Datagrid/Datagrid.scss
@@ -151,6 +151,10 @@
   .Datagrid__rows--frozen {
     overflow-x: hidden;
     -ms-overflow-style: none;
+    & > div:last-child {
+      /* IE11 Misalignment on last row */
+      margin-bottom: $height-scrollbar;
+    }
   }
 }
 
