--- a/src/alto-ui/scss/variables.scss
+++ b/src/alto-ui/scss/variables.scss
@@ -324,6 +324,9 @@ $height-datagrid-header-default: 1.75rem !default;
 
 $height-datagrid-summary-default: 2.5rem !default;
 $height-datagrid-summary-comfortable: 3.5rem !default;
+
+$height-scrollbar: 17px !default;
+
 // ===================================
 // Border Radius
 
